Fix overlapping comment admin labels (#93)

--- a/djangocms_moderation/static/djangocms_moderation/css/comments_changelist.css
+++ b/djangocms_moderation/static/djangocms_moderation/css/comments_changelist.css
@@ -1,21 +1,16 @@
 td.field-message, th.column-message {
-    width: 65%;
-    overflow-wrap: break-word;
-    word-break: break-all;
-    white-space: wrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 td.field-date_created, th.column-date_created {
-    width: 10%;
+    width: 150px;
 }
 
-td.field-get_author, th.column-get_author {
-    width: 15%;
+td.field-get_author, th.column-get_author, td.field-author, th.column-author {
+    width: 20%;
 }
-
 
 #changelist-form table {
-	table-layout:fixed;
-} 
+    table-layout:fixed;
+}
